Made some changes to borders for headers on about page

--- a/boots_n_beer_band/public_html/css_karson_richardson.css
+++ b/boots_n_beer_band/public_html/css_karson_richardson.css
@@ -11,12 +11,30 @@ h3.beginnings {
     max-width: 163px;
 }
 
-p.beginnings {
-    background: white;
-    border: solid;
-    border-style: outset;
+h3.tour{
+    border-left-style: solid;
+    border-right-style: solid;
     border-color: #653119;
-    max-width: 1000px;   
+    padding: 0px 5px;
+    font-family: Engravers MT;
+    max-width: 80px;
+}
+
+h3.website_source {
+    border-left-style: solid;
+    border-right-style: solid;
+    border-color: #653119;
+    padding: 0px 5px;
+    font-family: Engravers MT;
+    max-width: 200px;
+    font-size: 16px
+}
+
+p.beginnings {
+    border-left-style: solid;
+    border-color: #653119;
+    max-width: 1000px;
+    padding: 0px 5px;
 }
 
 nav ul {
