--- a/boots_n_beer_band/public_html/css_karson_richardson.css
+++ b/boots_n_beer_band/public_html/css_karson_richardson.css
@@ -2,6 +2,27 @@ body {
     background-image:  linear-gradient(to bottom, #ab936d, #ffffff);
 }
 
+p {
+    text-align: center;
+    margin: 20px auto 20px auto;
+    max-width: 1000px;
+}
+
+#album {
+    border-left-style: solid;
+    border-right-style: solid;
+    border-color: #653119;
+    padding: 0px 5px;
+    font-family: Engravers MT;
+    max-width: 310px;
+    text-align: center;
+    margin: auto;
+}
+
+h3 {
+    text-align: center;
+}
+
 h3.beginnings {
     border-left-style: solid;
     border-right-style: solid;
@@ -9,6 +30,8 @@ h3.beginnings {
     padding: 0px 5px;
     font-family: Engravers MT;
     max-width: 163px;
+    text-align: center;
+    margin: auto;
 }
 
 h3.tour{
@@ -18,6 +41,8 @@ h3.tour{
     padding: 0px 5px;
     font-family: Engravers MT;
     max-width: 80px;
+    text-align: center;
+    margin: auto;
 }
 
 h3.website_source {
@@ -27,14 +52,19 @@ h3.website_source {
     padding: 0px 5px;
     font-family: Engravers MT;
     max-width: 200px;
-    font-size: 16px
+    font-size: 16px;
+    text-align: center;
+    margin: auto;
 }
 
 p.beginnings {
-    border-left-style: solid;
-    border-color: #653119;
     max-width: 1000px;
-    padding: 0px 5px;
+    padding: 0px 5px 35px 0px;
+    text-align: center;
+    margin: 20px auto 40px auto;
+    border-bottom: solid #653119;
+    
+    
 }
 
 nav ul {
@@ -48,7 +78,7 @@ nav ul {
 nav li {
     float: left;
     display: block;
-    margin: 20px;
+    margin: 15px;
     padding: 5px;
     border: solid;
     font-family: Engravers MT;
@@ -65,6 +95,35 @@ nav li:hover {
 }
 
 img.boot {
+    display: block;
+    margin: auto;
+    width: 40%;
+}
+
+ul.locations {
+    list-style-type: none;
+    margin: auto;
+}
+
+ul.locations li {
+    float: left;
+    display: block;
+    border: solid 1px;
+    margin: 20px;
+    padding: 3px;
+}
+
+ul.locations li:hover {
+    background-color: #fff;
+}
+
+#schedulerefer {
+    margin: 20px auto 75px auto;
+    border-bottom: solid #653119;
+    padding-bottom: 30px;
+}
+
+#simpsonlogo {
     display: block;
     margin: auto;
     width: 40%;
