--- a/boots_n_beer_band/public_html/css_karson_richardson.css
+++ b/boots_n_beer_band/public_html/css_karson_richardson.css
@@ -19,6 +19,30 @@ p {
     margin: auto;
 }
 
+table {
+    margin: auto;
+}
+
+h1 {
+    text-align: center;
+    font-size: 35px;
+    font-family: Engravers MT;
+    border-bottom: solid #653119;
+    border-top: solid #653119;
+    padding: 30px 0px 30px 0px;
+}
+
+h2.biography {
+    border-left-style: solid;
+    border-right-style: solid;
+    border-color: #653119;
+    padding: 0px 5px;
+    font-family: Engravers MT;
+    max-width: 195px;
+    text-align: center;
+    margin: auto auto 20px auto;
+}
+
 h3 {
     text-align: center;
 }
@@ -85,6 +109,47 @@ nav li {
     font-size: 14px;
 }
 
+
+#index_nav li {
+    float: left;
+    display: block;
+    margin: 5px;
+    padding: 5px;
+    border: solid;
+    font-family: Engravers MT;
+    font-size: 14px;
+}
+
+#merchandise_nav li {
+    float: left;
+    display: block;
+    margin: 5px;
+    padding: 5px;
+    border: solid;
+    font-family: Engravers MT;
+    font-size: 14px;
+}
+
+#schedule_nav li {
+    float: left;
+    display: block;
+    margin: 5px;
+    padding: 5px;
+    border: solid;
+    font-family: Engravers MT;
+    font-size: 14px;
+}
+
+#sizes li {
+    float: left;
+    display: block;
+    margin: 20px;
+    padding: 5px;
+    border: solid;
+    font-family: Engravers MT;
+    font-size: 14px;
+}
+
 nav li a {
     text-decoration: none;
     color: #000
@@ -98,6 +163,12 @@ img.boot {
     display: block;
     margin: auto;
     width: 40%;
+}
+
+img {
+    display: block;
+    margin: auto;
+    width: 20%;
 }
 
 ul.locations {
@@ -114,6 +185,17 @@ ul.locations li {
 }
 
 ul.locations li:hover {
+    background-color: #fff;
+}
+
+ol li {
+    display: block;
+    border: solid 1px;
+    margin: 20px;
+    padding: 3px;
+}
+
+ol li:hover {
     background-color: #fff;
 }
 
