--- a/boots_n_beer_band/public_html/css/ryan_nees.css
+++ b/boots_n_beer_band/public_html/css/ryan_nees.css
@@ -1,6 +1,5 @@
 body {
     background: #ffd6aa;
-    <!-- Brown Theme Code: AA7439 -->
 }
 header {
     background: #804d16;
@@ -11,6 +10,7 @@ header {
     color: white;
     font-family: Goudy Stout, serif;
     font-size: 25px;
+    text-align: left;
     border-style: solid;
     border-width: 3px;
     border-radius: 10px;
@@ -23,6 +23,9 @@ footer {
     border: 2px solid black;
     border-radius: 5px;
     color: white;
+    font-family: Calibri, serif;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 nav ul {
@@ -46,7 +49,7 @@ nav li a {
     color: white;
     text-align: center;
     padding-left: 17px;
-    padding-right: 8px;
+    padding-right: 18px;
     text-decoration: none;
 }
  nav li a:hover {
@@ -61,14 +64,74 @@ nav li a {
     color: white;
  }
  
+ th {
+    background-color: #d4a16a;
+    font-family: Goudy Stout, serif;
+    color: black;
+    font-size: 23px;
+ }
+ 
+td {
+    background-color: #ffd6aa;
+    color: black;
+}
+ 
  article {
     background-color:#d4a16a;
     border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
+    font-family: Calibri, serif;
+    font-size: 20px;
  }
  
+ img {
+    border:4px solid black;
+    border-radius: 5px;
+ }
+ 
+ h2 {
+    font-family: Goudy Stout, serif;
+    font-size: 28px;
+ }
+ 
+ h3 {
+    font-family: Goudy Stout, serif;
+    font-size: 23px;
+ }
+ 
+ h4 {
+    font-family: Goudy Stout, serif;
+    font-size: 18px
+ }
+    
  #sizes {
     font-weight: bold;
     font-style: italic;
  }
+ 
+ .tracks {
+    font-family: Goudy Stout, serif;
+    font-size: 13px;
+    color: black;
+ }
+ 
+  .bass {
+  width: 16%;
+  }
+
+  .piano {
+  width: 20%;
+  }
+
+  .drums {
+  width: 22%;
+  }
+
+  .guitar {
+  width: 13%;
+  }
+
+  .fiddle {
+  width: 25%;
+  }
