--- a/boots_n_beer_band/public_html/css/css_karson_richardson.css
+++ b/boots_n_beer_band/public_html/css/css_karson_richardson.css
@@ -53,7 +53,8 @@ h3.beginnings {
     border-color: #653119;
     padding: 0px 5px;
     font-family: Engravers MT;
-    max-width: 163px;
+    /*max-width: 350px;*/
+    width: auto;
     text-align: center;
     margin: auto;
 }
@@ -127,6 +128,13 @@ img {
     display: block;
     margin: auto;
     width: 20%;
+}
+
+img.member {
+    display: block;
+    margin: auto;
+    width: 20%;
+    border: outset 5px;
 }
 
 ul.locations {
