Fixed Heading borders and added borders around the images on the index page. Also updated logo on login and signup page

--- a/boots_n_beer_band/public_html/css/css_karson_richardson.css
+++ b/boots_n_beer_band/public_html/css/css_karson_richardson.css
@@ -53,8 +53,7 @@ h3.beginnings {
     border-color: #653119;
     padding: 0px 5px;
     font-family: Engravers MT;
-    /*max-width: 350px;*/
-    width: auto;
+    max-width: 250px;
     text-align: center;
     margin: auto;
 }
@@ -65,7 +64,7 @@ h3.tour{
     border-color: #653119;
     padding: 0px 5px;
     font-family: Engravers MT;
-    max-width: 80px;
+    max-width: 120px;
     text-align: center;
     margin: auto;
 }
@@ -76,7 +75,7 @@ h3.website_source {
     border-color: #653119;
     padding: 0px 5px;
     font-family: Engravers MT;
-    max-width: 200px;
+    max-width: 140px;
     font-size: 16px;
     text-align: center;
     margin: auto;
@@ -128,6 +127,20 @@ img {
     display: block;
     margin: auto;
     width: 20%;
+}
+
+img.piano {
+    display: block;
+    margin: auto auto auto 365px;
+    width: 20%;
+    border: outset 5px;    
+}
+    
+img.guitar {
+    display: block;
+    margin: auto auto auto 635px;
+    width: 20%;
+    border: outset 5px;
 }
 
 img.member {
