--- a/boots_n_beer_band/public_html/css/css_karson_richardson.css
+++ b/boots_n_beer_band/public_html/css/css_karson_richardson.css
@@ -166,7 +166,8 @@ ul.locations li {
 ol li {
     display: block;
     border: solid 1px;
-    margin: 20px;
+    max-width: 240px;
+    margin: auto auto 5px auto;
     padding: 3px;
 }
 
