Changed image extension so that it would show up on other browsers. Also fixed images on index page

--- a/boots_n_beer_band/public_html/css/css_karson_richardson.css
+++ b/boots_n_beer_band/public_html/css/css_karson_richardson.css
@@ -135,14 +135,14 @@ img {
 
 img.piano {
     display: block;
-    margin: auto auto auto 365px;
+    margin: auto;
     width: 20%;
     border: outset 5px;    
 }
     
 img.guitar {
     display: block;
-    margin: auto auto auto 635px;
+    margin: auto;
     width: 20%;
     border: outset 5px;
 }
